--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -4,7 +4,7 @@
     "description": "Extension name"
   },
   "extDesc": {
-    "message": "Image search made easy.",
+    "message": "Image search made simple.",
     "description": "Extension description"
   }
 }
